Project Cards header, text, and icons styled.  Needs some fixing on the overflow text, sizing, and how the cards fit in the bigger space.

--- a/style.css
+++ b/style.css
@@ -227,22 +227,49 @@ button {
     grid-row: 1 / 3;
     align-content: start;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    border: 1px solid blue;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     height: 100%;
     gap: 15px;
 
 }
 
 .project-card {
-    border: 1px solid red;
-    height: 100px;
-    width: 150px;
-    background-color: white;
+    background-color: var(--color-card-background-color);
+    border-radius: var(--cards-border-radius);
+    box-shadow: var(--cards-box-shadow);
+    display: flex;
+    flex-flow: column nowrap;
+    gap: 5px;
+    
+
+    padding: 20px;
+    height: 175px;
+    width: 300px;
+
+}
+
+.project-card header {
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.project-card p {
+    font-size: .9rem;
+    font-weight: 300;
+    overflow: auto;
+    text-overflow: ellipsis;
 }
 
 .project-card-actions {
+    align-self: end;
+    justify-self: end;
 
+
+}
+
+.project-icon {
+    height: 25px;
+    width: 25px;
 }
 
 .announcements-and-trending-sidebar-container {
@@ -287,7 +314,7 @@ hr {
     font-size: 0.8rem;
     font-weight: 300;
     max-width: 50ch;
-    overflow: hidden;
+    overflow: auto;
     text-overflow: ellipsis;
 }
 
